@@ -1,3 +1,8 @@
+Tue Jun  8 17:49:18 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
+
+	* io.c, eval.c, process.c: remove all condition of r26371.
+	  now, all platform use the same way. [Bug #3278][ruby-core:30167]
+
 Tue Jun  8 17:45:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/iconv/iconv.c (rb_iconv_sys_fail): fix number of arguments.
